--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
       .header {
         color: black;
-        margin-top: 150px;
+        margin-top: 120px;
         font-size: 3rem;
         text-align: center;
       }
@@ -43,7 +43,7 @@
         color: black;
         font-size: 2rem;
         max-width: 90%;
-        margin-top: 80px;
+        margin-top: 70px;
         margin-bottom: 20px;
         margin-left: 20px;
       }
@@ -69,6 +69,7 @@
         border-radius: 80%;
         height: 60px;
         width: 60px;
+        justify-content: center;
         text-align: center;
         font-size: 2rem;
         line-height: 30px;
@@ -76,7 +77,7 @@
         background-color: #e57b7b;
       }
       #linkContainer {
-        margin-top: 30px;
+        margin-top: 25px;
         font-size: 1.3rem;
       }
       .flex {
@@ -91,7 +92,7 @@
         border-radius: 5px;
       }
       #result {
-        margin-top: 20px;
+        margin-top: 15px;
         font-size: 1.3rem;
         text-align: center;
         margin-left: 20px;
