--- a/ecard.html
+++ b/ecard.html
@@ -46,24 +46,23 @@
         虽然我们还没确定关系，甚至还未曾谋面，但我依然要在这个特别的日子里，向你送上最真挚的祝福：情人节快乐！
       </p>
       <p>
-        我猜，你或许是输入了“沈阳”和“情人节快乐”才打开了这封信。当然，如果你输入的是“女朋友”或“我喜欢你”这样的词语，也同样能开启这段心语。不信的话你可以试试，哈哈。
+        我猜，你或许是输入了“沈阳”和“情人节快乐”才打开了这封信。当然，其实还有其他的答案也同样可以进来。不信的话你可以试试，哈哈。
       </p>
       <p>
-        其实，我一直在犹豫，今天是否应该送你一份礼物，比如通过外卖送你一束鲜花。之前询问你的住址，正是出于这个考虑。但后来我转念一想，送花这样浪漫的事情，当然要当面亲手送达才更有意义。既然我们相隔万里，无法亲手递上那束花，正好最近我又刚开始学习编程，那干脆就写一封电子贺卡吧。
+        我本来想送你一束花，但想想还是当面送更有意义。既然我们相隔万里，那我就用这封电子贺卡代替吧。
       </p>
       <p>
-        每个人都渴望拥有一段双向奔赴的爱情，我们或许都曾经历过那份缘分的缺失，只能以“缘分未到”来安慰自己。但我深知，缘分不会凭空降临，如果不主动去争取，即使缘分到了，也可能擦肩而过。尽管我曾因不美好的经历而对接触女生有所抵触，但既然我决定迈出这一步，就一定会全心全意地投入。
+        每个人都渴望拥有一段双向奔赴的爱情，我们或许都曾经历过那份缘分的缺失，只能以“缘分未到”来安慰自己。但我深知，缘分不会凭空降临，如果不主动去争取，即使缘分到了，也可能擦肩而过。
       </p>
       <p>
-        在与你“云相处”的这段日子里，我感受到了你的独特与不同。虽然你很少主动找我，但我却有一种我们正在慢慢靠近的感觉。与你聊天，总是那么轻松愉悦，没有丝毫的负担。也许，这一次，真的是缘分到了呢？
+        在和你聊天的这段日子里，我感受到了你的独特与不同。虽然你很少主动找我，但我却有一种我们正在慢慢靠近的感觉。与你聊天，也很轻松愉悦，没有丝毫的负担。
       </p>
       <p>
-        说到这封情人节贺卡，它其实是一个公开的网页，任何人都可以通过网址访问。所以，它也可以被视为一份向全世界公开的情书。或许未来的某一天，当你再次打开这个网页时，会输入不同的答案；或许多年后，当有人问及我们的爱情故事时，它会成为我追求你的铁证；或许在我们未来的争吵中，它能让我们回想起曾经的那份美好与纯真。
+        说到这封情人节贺卡，它其实是一个公开的网页，任何人都可以通过网址访问。我期待在未来的某一天，当你再次打开这个网页时，会输入不同的答案；或许多年后，当我们回忆过往时，它会是一个美好的记忆点。
       </p>
-      <p>
-        好了，不多说了。无论未来如何变迁，我此刻的情感都是真实而热烈的。祝你情人节快乐，祝我们情人节快乐！
-      </p>
-      <p style="text-align: right">忐忑的小庞</p>
+      <p>好了，不多说了。无论未来如何变迁，我此刻的情感都是真实的。</p>
+      <p>最后，再次祝你情人节快乐！</p>
+      <p style="text-align: right">小庞</p>
       <p style="text-align: right">2025年2月14日</p>
     </div>
   </body>
